@@ -2,7 +2,8 @@ package io.tech1.framework.b2b.mongodb.security.jwt.services.impl;
 
 import io.tech1.framework.b2b.mongodb.security.jwt.domain.dto.responses.ResponseInvitationCode1;
 import io.tech1.framework.b2b.mongodb.security.jwt.domain.dto.responses.ResponseServerSessionsTable;
-import io.tech1.framework.b2b.mongodb.security.jwt.domain.dto.responses.ResponseUserSession3;
+import io.tech1.framework.b2b.mongodb.security.jwt.domain.dto.responses.ResponseUserSession2;
+import io.tech1.framework.b2b.mongodb.security.jwt.domain.jwt.CookieRefreshToken;
 import io.tech1.framework.b2b.mongodb.security.jwt.repositories.InvitationCodeRepository;
 import io.tech1.framework.b2b.mongodb.security.jwt.repositories.UserSessionRepository;
 import io.tech1.framework.b2b.mongodb.security.jwt.services.BaseSuperAdminService;
@@ -14,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static io.tech1.framework.b2b.mongodb.security.jwt.comparators.SecurityJwtComparators.INVITATION_CODE_1;
 
@@ -35,24 +35,24 @@ public class BaseSuperAdminServiceImpl implements BaseSuperAdminService {
         return invitationCodes.stream()
                 .map(ResponseInvitationCode1::new)
                 .sorted(INVITATION_CODE_1)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public ResponseServerSessionsTable getServerSessions() {
+    public ResponseServerSessionsTable getServerSessions(CookieRefreshToken cookie) {
         var dbUserSessions = this.userSessionRepository.findAll();
         var activeSessionsRefreshTokens = this.sessionRegistry.getActiveSessionsRefreshTokens();
-        List<ResponseUserSession3> activeSessions = new ArrayList<>();
-        List<ResponseUserSession3> inactiveSessions = new ArrayList<>();
+        List<ResponseUserSession2> activeSessions = new ArrayList<>();
+        List<ResponseUserSession2> inactiveSessions = new ArrayList<>();
         dbUserSessions.forEach(dbUserSession -> {
-            var session = new ResponseUserSession3(dbUserSession);
+            var session = ResponseUserSession2.of(dbUserSession, cookie);
             if (activeSessionsRefreshTokens.contains(dbUserSession.getJwtRefreshToken())) {
                 activeSessions.add(session);
             } else {
                 inactiveSessions.add(session);
             }
         });
-        return new ResponseServerSessionsTable(
+        return ResponseServerSessionsTable.of(
                 activeSessions,
                 inactiveSessions
         );
